methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: '=' expected but ';' found.
  while (seenBaggle==false){
^